[package]
authors = ["Michael Lodder <redmike7@gmail.com>", "hifided"]
categories = ["cryptography", "rsa"]
description = "Cryptographic Accumulator common structs and methods No-std WASM supported"
edition = "2021"
license = "Apache-2.0"
name = "accumulator-common"
repository = "https://github.com/hifided/accumulator-rs"
version = "0.1.0"

[features]
default = ["std"]
std = [ "no-std-compat/std" ]
bi-rust = ["num-traits", "num-integer", "num-bigint"]

#default = ["bi-rust"]
#bi-rust = ["glass_pumpkin", "num-bigint", "num-traits", "num-integer", "rand"]
#bi-ossl = ["openssl"]
#bi-gmp = ["hex", "rust-gmp"]

[dependencies]
#codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive",] }

num-traits = { version = "0.2", optional = true,  default-features = false }
num-integer = { version = "0.1", optional = true, default-features = false }
num-bigint = { version = "0.3", optional = true, default-features = false }
zeroize = { version = "1.5.7", default-features = false, features = ["zeroize_derive"] }

arrayref = { version = "0.3", default-features = false}
blake2 = { version = "0.8", default-features = false}
failure = { version = "0.1.8", default-features = false, features = ["derive",]}

no-std-compat = { version = "0.4.1", default-features = false, features = ["compat_hash", "compat_sync", "alloc"] }

[dev-dependencies]
#rust-gmp = { version = "0.5",  git = "https://github.com/mikelodder7/rust-gmp" }

#[package.metadata.docs.rs]
#all-features = true
#rustdoc-args = ["--cfg", "docsrs"]
