[package]
authors = ["Michael Lodder <redmike7@gmail.com>", "hifided"]
categories = ["cryptography", "rsa", "no_std"]
description = "A Universal Cryptographic RSA Accumulator No-std WASM supported"
documentation = "https://docs.rs/accumulator-rs"
edition = "2021"
license = "Apache-2.0"
name = "rsa"
readme = "README.md"
repository = "https://github.com/hifided/accumulator-rs"
version = "0.1.0"

[badges]
maintenance = { status = "experimental" }

[features]
default = ["std"]
std = ["no-std-compat/std"]
#default = ["bi-rust"]
#bi-rust = ["common/bi-rust"]
#bi-ossl = ["common/bi-ossl"]
#bi-gmp = ["common/bi-gmp"]

[dependencies]
common = { version = "0.1.0", package = "accumulator-common", path = "../accumulator-common", default-features = false, features = ["bi-rust"]  }

arrayref = { version = "0.3", default-features = false}
blake2 = { version = "0.8", default-features = false}

#hex = { version = "0.4",  default-features = false }
hkdf = { version = "0.8",  default-features = false }
#rayon = { version = "1.5.3",  default-features = false }

serde = { version = "1.0", default-features = false, features = ["serde_derive"] }
zeroize = { version = "1.5.7", default-features = false, features = ["zeroize_derive"] }

no-std-compat = { version = "0.4.1", default-features = false, features = ["compat_hash", "compat_sync", "alloc"] }

[dev-dependencies]
#rust-gmp = "0.5"

#[package.metadata.docs.rs]
#all-features = true
#rustdoc-args = ["--cfg", "docsrs"]
